# jae

./: Cargo.toml  README.md
src/: clipboard.rs  commands.rs  editor.rs  keybindings.rs  kill_ring.rs  lib.rs  logging.rs  main.rs  ui.rs
src/editor/: buffer_ops.rs  core.rs  dialogs.rs  file_ops.rs  menu.rs  mod.rs  movement.rs  selection.rs  settings.rs  text_widget.rs  types.rs  undo.rs
src/editor/syntax/: highlight.rs  language.rs  mod.rs
