[package]
name = "jae"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
base64 = "0.22"
urlencoding = "2.1"
dirs = "5.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
arboard = "3.4"

# Tree-sitter for syntax highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"

# Language grammars
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-json = "0.24"
tree-sitter-md = "0.3"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-java = "0.23"